--- a/views/newmindex.jade
+++ b/views/newmindex.jade
@@ -303,6 +303,9 @@ head
         alert('Incorrect email');
         errcount++;
         }
+        if(errcount!=0) {
+          return;
+        }
         console.log('submitting now');
         //$("#regform").submit();
         request = new XMLHttpRequest();
