--- a/views/emptymindexreg.jade
+++ b/views/emptymindexreg.jade
@@ -261,7 +261,7 @@ head
           #welcomem.row(style='text-align:center;padding-right:20px;')
             .col-xs-12
               h2 Welcome !
-              h3 Add a book by touching + at the bottom of the screen
+              h3 Add a movie by touching + at the bottom of the screen
           .row
             #movieinsert.col-xs-12
           //add a smile here or something
