--- a/views/emptymindexreg.jade
+++ b/views/emptymindexreg.jade
@@ -488,7 +488,7 @@ head
                visibleinsert+="</h3></div></div>";
                var hiddeninsert="<div class='row modpanel' id='modbook"+bid+"' style='text-align:center;display:none;background-color:#333;'><div class='col-xs-12'>";
                if(newbook){
-                hiddeninsert+="<button class='btn btn-primary' id='readbutton"+mid+"' onclick='modify(0,"+bid+")' type='button'>Прочитана</button>";
+                hiddeninsert+="<button class='btn btn-primary' id='readbutton"+bid+"' onclick='modify(0,"+bid+")' type='button'>Прочитана</button>";
                }
                hiddeninsert+="<button class='btn btn-danger' onclick='modify(1,"+bid+")' type='button'>Удалить</button></div</div>";
                //$('#bookinsert').prepend(insert);
