--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -306,7 +306,7 @@ head
             nav
               ul(class="pager")
                 li(class="previous")
-                  a(style='background-color:#EFAF4F;') Add
+                  a(style='background-color:#EFAF4F;' id='moviesubmitbutton') Add
                 li(class="next")
                   a( class='addbookbutton' style='background-color:#999;') Close
         .row(style='text-align:center;')
