--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -225,8 +225,10 @@ head
       }
       #booksrow {
        transition: 0.5s -webkit-filter linear;
+       -webkit-filter:brightness(1);
       }
       #moviesrow {
+        -webkit-filter:brightness(1);
        transition: 0.5s -webkit-filter linear;
       }
   body
