--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -411,19 +411,19 @@ head
           if($('#showbooks').hasClass('activebutton'))
           {$('#addbook').slideToggle();
           if($('#maincont').css('-webkit-filter')==='brightness(1)'){
-            $('#maincont').css('-webkit-filter':'brightness(0.4)');
+            $('#maincont').css('-webkit-filter','brightness(0.4)');
            }
            else {
-            $('#maincont').css('-webkit-filter':'brightness(1)');
+            $('#maincont').css('-webkit-filter','brightness(1)');
            }
           }
           else
             {$('#addmovie').slideToggle();
           if($('#maincont').css('-webkit-filter')==='brightness(1)'){
-            $('#maincont').css('-webkit-filter':'brightness(0.4)');
+            $('#maincont').css('-webkit-filter','brightness(0.4)');
            }
            else {
-            $('#maincont').css('-webkit-filter':'brightness(1)');
+            $('#maincont').css('-webkit-filter','brightness(1)');
            }
           }
           });
