--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -244,7 +244,7 @@ head
       a(href="http://m.peopleandbooks.com/settings") Настройки
       a(href='http://m.peopleandbooks.com/about') О проекте
       a(href="http://peopleandbooks.com/logout") Выйти
-    .container( id='maincont' style='background-color:#52CA8F;overflow:auto;height:100%;padding-right:0px;padding-bottom:74px;')
+    .container( id='maincont' style='-webkit-filter:brightness(1);background-color:#52CA8F;overflow:auto;height:100%;padding-right:0px;padding-bottom:74px;')
       #booksrow.row
         .col-xs-12
           .row
