--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -143,6 +143,9 @@ head
         transition: 0.5s -webkit-filter linear;
         transition: background-color 0.5s linear;
       }
+      #maincont {
+        transition: 0.5s -webkit-filter linear;
+      }
       .navbar-right {
         float: none !important; 
       }
