--- a/views/index.jade
+++ b/views/index.jade
@@ -201,7 +201,7 @@ head
       a(href='#') О проекте
       a(href="#") Выйти
     .sidebar(style='width:74px;position:fixed;height:100%;background-color:#1d1d1d;text-align:center;z-index:2000;')
-      //img(class="media-object img-circle" src="/bootstrap/images/books.jpg" style='margin-left:5px;margin-top:30px;width:64px;height:64px;' alt="...")
+      img(class="media-object img-circle" src="/bootstrap/images/pblogo.png" style='margin-left:5px;margin-top:30px;width:64px;height:64px;' alt="...")
       span(class='glyphicon glyphicon-align-justify' id='showLeft' style='color:#333;font-size:30px;margin-top:20px;')
     .bckgrnd
     .container(style='padding-left:84px;width:100% !important;padding-right:none;z-index:2;')  
