--- a/views/index.jade
+++ b/views/index.jade
@@ -190,7 +190,8 @@ head
       window.location='http://m.peopleandbooks.com/';
       }
     nav(class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1")
-      h3(style='text-align:center;color:orange;') People & Books
+      //h3(style='text-align:center;color:orange;') People & Books
+      img(class="media-object img-circle" src="/images/pblogov4.png" style='width:64px;height:64px;' alt="...")
       form(class="navbar-form navbar-right" method='post' action='/srch' id='srch' role="search")
         .input-group
            input(type="text" class="form-control" name='searchfield' id='searchfield' style='background-color:#333;color:white;border-color:#333;border-top-left-radius:30px;border-bottom-left-radius:30px;') 
@@ -201,7 +202,7 @@ head
       a(href='#') О проекте
       a(href="#") Выйти
     .sidebar(style='width:74px;position:fixed;height:100%;background-color:#1d1d1d;text-align:center;z-index:2000;')
-      img(class="media-object img-circle" src="/images/pblogov4.png" style='margin-left:5px;margin-top:30px;width:64px;height:64px;' alt="...")
+      //img(class="media-object img-circle" src="/images/pblogov4.png" style='margin-left:5px;margin-top:30px;width:64px;height:64px;' alt="...")
       span(class='glyphicon glyphicon-align-justify' id='showLeft' style='color:#333;font-size:30px;margin-top:20px;')
     .bckgrnd
     .container(style='padding-left:84px;width:100% !important;padding-right:none;z-index:2;')  
