--- a/views/newmindex.jade
+++ b/views/newmindex.jade
@@ -164,7 +164,7 @@ head
       }
   body
     nav(class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1")
-      h3(style='text-align:center;color:orange;') People & Books
+      img(class="media-object img-circle" src="/images/pblogov4.png" style='margin-top:20px;margin-bottom:20px;margin-left:auto;margin-right:auto;width:64px;height:64px;' alt="...")
       a(href="#") Настройки
       a(href='http://m.peopleandbooks.com/about') О проекте
     .bckgrnd
