--- a/views/emptymindexreg.jade
+++ b/views/emptymindexreg.jade
@@ -235,7 +235,7 @@ head
       }
   body
     nav(class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1")
-      h3(style='text-align:center;') People & Books
+      img(class="media-object img-circle" src="/images/pblogov4.png" style='margin-top:20px;margin-bottom:20px;margin-left:auto;margin-right:auto;width:64px;height:64px;' alt="...")
       // 
         form(class="navbar-form navbar-right" method='post' action='/srch' id='srch' role="search")
           .input-group
