--- a/views/newemptyindexreg.jade
+++ b/views/newemptyindexreg.jade
@@ -271,7 +271,7 @@ head
       window.location='http://m.peopleandbooks.com/';
       }
     nav(class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1")
-      h3(style='text-align:center;color:orange;') People & Books
+      img(class="media-object img-circle" src="/images/pblogov4.png" style='margin-top:20px;margin-bottom:20px;margin-left:auto;margin-right:auto;width:64px;height:64px;' alt="...")
       form(class="navbar-form navbar-right" method='post' action='/srch' id='srch' role="search")
         .input-group
            input(type="text" class="form-control" name='searchfield' id='searchfield' style='background-color:#333;color:white;border-color:#333;border-top-left-radius:30px;border-bottom-left-radius:30px;') 
