--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -188,12 +188,12 @@ head
        color:white;
       }
       .alreadyb{
-      color:rgba(0, 0, 0, 0.27);
-      -moz-opacity:0.3;
+      color:rgb(0, 0, 0);
+      opacity:0.3;
       }
       .alreadym{
-      color:rgba(0,0,0,0.2);
-      -moz-opacity:0.3;
+      color:rgb(0,0,0);
+      opacity:0.2;
       }
       .leftPaddingExtended{
         padding-left:30px;
@@ -220,7 +220,8 @@ head
       }
       .flick:hover {
         cursor:pointer;
-        background-color:rgba(0,0,0,0.2);
+        background-color:rgb(0,0,0);
+        opacity:0.2;
       }
       .h1 .small,
        .h1 small,
