--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -268,10 +268,10 @@ head
           .col-xs-12
             .form-group
               label(for="exampleInputEmail1") Название
-              input(type="email" class="form-control" id="booktitle" placeholder="Crime and punishment")
+              input(type="email" class="form-control" id="booktitle" maxlength='50' placeholder="Crime and punishment")
             .form-group
               label(for="exampleInputEmail1") Автор
-              input(type="email" class="form-control" id="author" placeholder="Dostoevsky F.M.")
+              input(type="email" class="form-control" id="author" maxlength='40' placeholder="Dostoevsky F.M.")
             .checkbox
               label
                 input(type="checkbox" id='newbook') 
@@ -296,10 +296,10 @@ head
           .col-xs-12
             .form-group
                 label(for="exampleInputEmail1") Название
-                input(type="email" class="form-control" id="movietitle" placeholder="No country for old men")
+                input(type="email" class="form-control" id="movietitle" maxlength='50' placeholder="No country for old men")
             .form-group
               label(for="exampleInputEmail1") Год
-              input(type="email" class="form-control" id="year" placeholder="2007")
+              input(type="email" class="form-control" id="year" maxlength='4' placeholder="2007")
             .checkbox
               label
                 input(type="checkbox" id='newmovie') 
@@ -409,6 +409,34 @@ head
          eval("$('#modmovie"+mid+"').slideToggle();");
         }
         //end of openmodpanel funciton for movies column
+        // diable/allow cheking checkboxes
+        $('#newbook').click(function() {
+         if ($(this).is(':checked')) {
+           $('#star').attr('checked',false);
+           $('#attention').attr('checked',false);
+           $('#star').attr('disabled', false);
+           $('#attention').attr('disabled', true);
+         } else {
+           $('#star').attr('checked',false);
+           $('#attention').attr('checked',false);
+           $('#attention').attr('disabled', false);
+           $('#star').attr('disabled', true);
+         }
+         });
+        $('#newmovie').click(function() {
+         if ($(this).is(':checked')) {
+           $('#moviestar').attr('checked',false);
+           $('#movieattention').attr('checked',false);
+           $('#moviestar').attr('disabled', false);
+           $('#movieattention').attr('disabled', true);
+         } else {
+           $('#moviestar').attr('checked',false);
+           $('#movieattention').attr('checked',false);
+           $('#movieattention').attr('disabled', false);
+           $('#moviestar').attr('disabled', true);
+         }
+         });
+        // end of disable/allowchecking checkboxes
       // CA5B52 for movies 99362F
       $('.addbookbutton').click(function(){
           if($('#showbooks').hasClass('activebutton'))
@@ -494,11 +522,25 @@ head
         if(!author){
           author='--';
         }
+        else {
+          if(author.length()>50){
+            alert('Author name is too long');
+            allowsubmit=1;
+            return;
+          }
+        }
         var booktitle = $('#booktitle').val();
         if(!booktitle) {
           alert('Specify book title');
           allowsubmit=1;
           return
+        }
+        else {
+          if(booktitle.length()>50){
+            alert('Title is too long');
+            allowsubmit=1;
+            return;
+          }
         }
         var uid = #{uid};
         var star;
