--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -279,10 +279,10 @@ head
             .col-xs-12
               .form-group
                 label(for="exampleInputEmail1") Название
-                input(type="email" class="form-control" id="booktitle" placeholder="Crime and punishment")
+                input(type="email" class="form-control" id="booktitle" maxlength='50' placeholder="Crime and punishment")
               .form-group
                 label(for="exampleInputEmail1") Автор
-                input(type="email" class="form-control" id="author" placeholder="Dostoevsky F.M.")
+                input(type="email" class="form-control" id="author" maxlength='40' placeholder="Dostoevsky F.M.")
               .checkbox
                 label
                   input(type="checkbox" id='newbook') 
@@ -314,10 +314,10 @@ head
             .col-xs-12
               .form-group
                 label(for="exampleInputEmail1") Название
-                input(type="email" class="form-control" id="movietitle" placeholder="No country for old men")
+                input(type="email" class="form-control" id="movietitle" maxlength='50' placeholder="No country for old men")
               .form-group
                 label(for="exampleInputEmail1") Год
-                input(type="email" class="form-control" id="year" placeholder="2007")
+                input(type="email" class="form-control" id="year" maxlength='4' placeholder="2007")
               .checkbox
                 label
                   input(type="checkbox" id='newmovie') 
@@ -440,6 +440,7 @@ head
            $('#moviestar').attr('disabled', true);
          }
          });
+        // end of disable/allowchecking checkboxes
         // Buttons which open forms for inserting new books/movies
         $('.addbookbutton').click(function(){
           if($('#addmovie').css('display') === 'block')
@@ -494,11 +495,23 @@ head
         if(!author){
           author='--';
         }
+        else {
+          if(author.length()>50){
+            alert('Author name is too long');
+            return;
+          }
+        }
         var booktitle = $('#booktitle').val();
         if(!booktitle) {
           alert('Specify book title');
           allowsubmit=1;
           return
+        }
+        else {
+          if(booktitle.length()>50){
+            alert('Title is too long');
+            return;
+          }
         }
         var uid = #{uid};
         var star;
