--- a/views/about.jade
+++ b/views/about.jade
@@ -165,13 +165,17 @@ head
     .sidebar(style='width:74px;position:fixed;height:100%;background-color:#1d1d1d;text-align:center;z-index:2000;')
       //img(class="media-object img-circle" src="/bootstrap/images/seo.jpg" style='margin-left:5px;margin-top:30px;width:64px;height:64px;' alt="...")
       span(class='glyphicon glyphicon-align-justify' id='showLeft' style='color:#333;font-size:30px;margin-top:20px;')
-    .container(style='padding-left:84px;width:100% !important;padding-right:none;')  
-      .jumbotron
-        h1 Tell me what you read, and I will tell you who you are.
-          small François Mauriac
-        p Track your information consumption with with P&B, never forget a book or a movie. See what your friends are reading, be aware of popular ideas ! 
-        p Hire intelegent people, keep up with your collegues, do not miss industry changing volumes.
-          a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+    .container(style='padding-left:84px;')  
+      .row
+        .col-xs-12
+           img(class="media-object img-circle" src="/images/pblogov4black.png" style='margin-top:20px;margin-bottom:20px;margin-left:auto;margin-right:auto;width:100px;height:100px;' alt="...")
+      .row
+        .col-xs-12
+          h1 Tell me what you read, and I will tell you who you are.
+            small François Mauriac
+          p Track your information consumption with with P&B, never forget a book or a movie. See what your friends are reading, be aware of popular ideas ! 
+          p Hire intelegent people, keep up with your collegues, do not miss industry changing volumes.
+            
       script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
       script(async src='/js/bootstrap.min.js')
       script.
