--- a/views/about.jade
+++ b/views/about.jade
@@ -168,8 +168,8 @@ head
     .container(style='padding-left:84px;')  
       .row
         .col-xs-12
-           img(class="media-object img-circle" src="/images/pblogov4black.png" style='margin-top:20px;margin-bottom:20px;margin-left:auto;margin-right:auto;width:100px;height:100px;' alt="...")
-      .row
+           img(class="media-object img-circle" src="/images/pblogov4.png" style='margin-top:20px;margin-bottom:20px;margin-left:auto;margin-right:auto;width:100px;height:100px;' alt="...")
+      .row(style='color:cornsilk;')
         .col-xs-12
           h1 Tell me what you read, and I will tell you who you are.
             small François Mauriac
