--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -62,7 +62,8 @@ head
       }
       
       .cbp-spmenu h3 {
-        color: skyblue;
+        text-align:center;
+        color: springgreen;
         font-size: 1.9em;
         padding: 20px;
         padding-top:27px;
@@ -255,7 +256,6 @@ head
       window.location='http://m.peopleandbooks.com/';
       }
     nav(class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1")
-      img(class="media-object img-circle" src="/images/pblogov4.png" style='margin-top:20px;margin-bottom:20px;margin-left:auto;margin-right:auto;width:64px;height:64px;' alt="...")
       h3 #{mail}
       form(class="navbar-form navbar-right" method='post' action='/srch' id='srch' role="search")
         .input-group
@@ -266,6 +266,7 @@ head
       a(href="#") Настройки
       a(href='/about') О проекте
       a(href="/logout") Выйти
+      img(class="media-object img-circle" src="/images/pblogov4.png" style='margin-top:20px;bottom:20px;margin-left:auto;margin-right:auto;width:64px;height:64px;' alt="...")
     .sidebar(style='width:74px;position:fixed;height:100%;background-color:#1d1d1d;text-align:center;z-index:2000;')
       //img(class="media-object img-circle" src="/bootstrap/images/seo.jpg" style='margin-left:5px;margin-top:30px;width:64px;height:64px;' alt="...")
       span(class='glyphicon glyphicon-align-justify' id='showLeft' style='color:#333;font-size:30px;margin-top:20px;')
