--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -266,7 +266,7 @@ head
       a(href="#") Настройки
       a(href='/about') О проекте
       a(href="/logout") Выйти
-      img(class="media-object img-circle" src="/images/pblogov4.png" style='margin-top:20px;bottom:20px;margin-left:auto;margin-right:auto;width:64px;height:64px;' alt="...")
+      img(class="media-object img-circle" src="/images/pblogov4.png" style='position:absolute;opacity:0.2;left:88px;bottom:20px;width:64px;height:64px;' alt="...")
     .sidebar(style='width:74px;position:fixed;height:100%;background-color:#1d1d1d;text-align:center;z-index:2000;')
       //img(class="media-object img-circle" src="/bootstrap/images/seo.jpg" style='margin-left:5px;margin-top:30px;width:64px;height:64px;' alt="...")
       span(class='glyphicon glyphicon-align-justify' id='showLeft' style='color:#333;font-size:30px;margin-top:20px;')
