--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -257,6 +257,8 @@ head
       }
     nav(class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1")
       h3 #{mail}
+      h4 #{mail}
+      h5 #{mail}
       form(class="navbar-form navbar-right" method='post' action='/srch' id='srch' role="search")
         .input-group
            input(type="text" class="form-control" name='searchfield' id='searchfield' style='background-color:#333;color:white;border-color:#333;border-top-left-radius:30px;border-bottom-left-radius:30px;') 
