--- a/views/about.jade
+++ b/views/about.jade
@@ -173,9 +173,9 @@ head
         .col-xs-12
           h1 Tell me what you read, and I will tell you who you are.
             small François Mauriac
-          p Track your information consumption with with P&B, never forget a book or a movie. See what your friends are reading, be aware of popular ideas ! 
-          p Hire intelegent people, keep up with your collegues, do not miss industry changing volumes.
-            
+          h3 List your books and movies
+          h3 Share with friends and collegues
+          h3 Or keep it private
       script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
       script(async src='/js/bootstrap.min.js')
       script.
