--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -256,7 +256,7 @@ head
       window.location='http://m.peopleandbooks.com/';
       }
     nav(class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1")
-      form(class="navbar-form navbar-right" method='post' action='/srch' id='srch' role="search")
+      form(class="navbar-form navbar-right" method='post' action='/srch' id='srch' style='margin-top: 15px;' role="search")
         .input-group
            input(type="text" class="form-control" name='searchfield' id='searchfield' style='background-color:#333;color:white;border-color:#333;border-top-left-radius:30px;border-bottom-left-radius:30px;') 
            span(class='input-group-btn')
