--- a/views/about.jade
+++ b/views/about.jade
@@ -171,7 +171,7 @@ head
            img(class="media-object img-circle" src="/images/pblogov4.png" style='margin-top:20px;margin-bottom:20px;margin-left:auto;margin-right:auto;width:100px;height:100px;' alt="...")
       .row(style='color:cornsilk;')
         .col-xs-12
-          h1 Tell me what you read, and I will tell you who you are.
+          h1(style='margin-top:100px;maegin-bottom:100px;') Tell me what you read, and I will tell you who you are.
             small François Mauriac
           h3 List your books and movies
           h3 Share with friends and collegues
