--- a/views/about.jade
+++ b/views/about.jade
@@ -169,13 +169,14 @@ head
       .row
         .col-xs-12
            img(class="media-object img-circle" src="/images/pblogov4.png" style='margin-top:20px;margin-bottom:20px;margin-left:auto;margin-right:auto;width:100px;height:100px;' alt="...")
-      .row(style='color:cornsilk;')
+      .row(style='color:white;')
         .col-xs-12
           h1(style='margin-top:100px;margin-bottom:100px;') Tell me what you read, and I will tell you who you are.
             small(style='margin-left:20px;') François Mauriac
-          h3 List your books and movies
-          h3 Share with friends and collegues
-          h3 Or keep it private
+          ul
+            li List your books and movies
+            li Share with friends and collegues
+            li Or keep it private
           h5(style='text-align:center;margin-top:100px;') Top&Views Design
           h5(style='text-align:center;') 2015 
       script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
