--- a/views/about.jade
+++ b/views/about.jade
@@ -149,7 +149,7 @@ head
   body
     script.
       if(screen.width < 414){
-      window.location='http://m.peopleandbooks.com/';
+      window.location='http://m.peopleandbooks.com/about';
       }
     nav(class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1")
       form(class="navbar-form navbar-right" method='post' action='/srch' id='srch' role="search")
@@ -173,10 +173,15 @@ head
         .col-xs-12
           h1(style='margin-top:100px;margin-bottom:100px;') Tell me what you read, and I will tell you who you are.
             small(style='margin-left:20px;') François Mauriac
-          ul
-            li List your books and movies
-            li Share with friends and collegues
-            li Or keep it private
+      .row
+        .col-xs-4(style='border-right:1px solid #ddd;')
+          h4 List your books and movies
+        .col-xs-4(style='border-right:1px solid #ddd;')
+          h4 Share with friends and collegues
+        .col-xs-4
+          h4 Or keep it private
+      .row
+        .col-xs-12
           h5(style='text-align:center;margin-top:100px;') Top&Views Design
           h5(style='text-align:center;') 2015 
       script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
