--- a/views/about.jade
+++ b/views/about.jade
@@ -174,13 +174,13 @@ head
           h1(style='margin-top:100px;margin-bottom:100px;') Tell me what you read, and I will tell you who you are.
             small(style='margin-left:20px;') François Mauriac
       .row
-        .col-xs-4(style='border-right:1px solid #ddd;')
+        .col-xs-4(style='border-right:1px solid gray;')
           h4 List your books and movies
-        .col-xs-4(style='border-right:1px solid #ddd;')
+        .col-xs-4(style='border-right:1px solid gray;')
           h4 Share with friends and collegues
         .col-xs-4
           h4 Or keep it private
-      .row
+      .row(style='color:gray;')
         .col-xs-12
           h5(style='text-align:center;margin-top:100px;') Top&Views Design
           h5(style='text-align:center;') 2015 
