--- a/views/about.jade
+++ b/views/about.jade
@@ -173,7 +173,7 @@ head
         .col-xs-12
           h1(style='margin-top:100px;margin-bottom:100px;') Tell me what you read, and I will tell you who you are.
             small(style='margin-left:20px;') François Mauriac
-      .row
+      .row(style='color:white;')
         .col-xs-4(style='border-right:1px solid gray;')
           h4 List your books and movies
         .col-xs-4(style='border-right:1px solid gray;')
