--- a/views/about.jade
+++ b/views/about.jade
@@ -171,7 +171,7 @@ head
            img(class="media-object img-circle" src="/images/pblogov4.png" style='margin-top:20px;margin-bottom:20px;margin-left:auto;margin-right:auto;width:100px;height:100px;' alt="...")
       .row(style='color:white;')
         .col-xs-12
-          h1(style='margin-top:100px;margin-bottom:100px;') Tell me what you read, and I will tell you who you are.
+          h1(style='margin-top:15%;margin-bottom:15%;') Tell me what you read, and I will tell you who you are.
             small(style='margin-left:20px;') François Mauriac
       .row(style='color:white;text-align:center;')
         .col-xs-4(style='border-right:1px solid gray;')
@@ -182,7 +182,7 @@ head
           h4 Or keep it private
       .row(style='color:gray;')
         .col-xs-12
-          h5(style='text-align:center;margin-top:100px;') Top&Views Design
+          h5(style='text-align:center;margin-top:20%;') Top&Views Design
           h5(style='text-align:center;') 2015 
       script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
       script(async src='/js/bootstrap.min.js')
