--- a/views/about.jade
+++ b/views/about.jade
@@ -155,6 +155,9 @@ head
       a:hover {
         color:ornage !important;
       }
+      a {
+        color:gray !important;
+      }
   body
     script.
       if(screen.width < 414){
