--- a/views/about.jade
+++ b/views/about.jade
@@ -183,7 +183,7 @@ head
            img(class="media-object img-circle" src="/images/pblogov4.png" style='margin-top:20px;margin-bottom:20px;margin-left:auto;margin-right:auto;width:100px;height:100px;' alt="...")
       .row(style='color:white;')
         .col-xs-12
-          h1(style='margin-top:15hv;margin-bottom:15vh;') Tell me what you read, and I will tell you who you are.
+          h1(style='margin-top:15vh;margin-bottom:15vh;') Tell me what you read, and I will tell you who you are.
             small(style='margin-left:20px;') François Mauriac
       .row(style='color:white;text-align:center;')
         .col-xs-4(style='border-right:1px solid gray;')
