--- a/views/about.jade
+++ b/views/about.jade
@@ -185,7 +185,7 @@ head
         .col-xs-12
           h1(style='margin-top:15vh;margin-bottom:15vh;text-align:center;') Tell me what you read, and I will tell you who you are.
             small(style='margin-left:20px;') François Mauriac
-      .row(style='color:white;text-align:center;')
+      .row(style='color:#ccc;text-align:center;')
         .col-xs-4(style='border-right:1px solid gray;')
           h4 List your books and movies
         .col-xs-4(style='border-right:1px solid gray;')
@@ -195,7 +195,7 @@ head
       .row(style='color:gray;')
         .col-xs-12
           a(href='http://topandviews.com')
-            h5(style='text-align:center;margin-top:20vh;') Top&Views Design
+            h5(style='text-align:center;margin-top:25vh;') Top&Views Design
           h5(style='text-align:center;') 2015 
       script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
       script(async src='/js/bootstrap.min.js')
